Fixed fragment spacing

--- a/src/media/css/site.styl
+++ b/src/media/css/site.styl
@@ -116,12 +116,10 @@ main {
     padding: 15px;
 }
 
-.main {
-    margin: 0 auto;
-    .fragment-error {
-        padding: 0;
-    }
+.fragment-error b {
+    margin-right: 5px;
 }
+
 .page > .overlay {
     max-width: 100%;
 }
